--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/app_gestion_stock.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jasperreports-6.5.0.jar=..\\..\\..\\Desktop\\iReport-5.6.0\\jasperreports-6.5.0.jar
+file.reference.jasperreports-fonts-6.5.0.jar=..\\..\\..\\Desktop\\iReport-5.6.0\\jasperreports-fonts-6.5.0.jar
+file.reference.jasperreports-javaflow-6.5.0.jar=..\\..\\..\\Desktop\\iReport-5.6.0\\jasperreports-javaflow-6.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.JasperLib.classpath}:\
+    ${file.reference.jasperreports-6.5.0.jar}:\
+    ${file.reference.jasperreports-fonts-6.5.0.jar}:\
+    ${file.reference.jasperreports-javaflow-6.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
